# toklog

./: .gitignore  CHANGELOG.md  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
toklog/: __init__.py  classify.py  cli.py  compress.py  config.py  context_drivers.py  detectors.py  doctor.py  gain.py  logger.py  pricing.py  report.py  setup_wizard.py  share.py  wrapper.py
toklog/adapters/: __init__.py  anthropic.py  gemini.py  openai.py  sse.py
toklog/proxy/: __init__.py  budget.py  cli.py  daemon.py  extractor.py  server.py  setup.py
toklog/templates/: report.html.j2
toklog/tests/: conftest.py  test_adapter_consistency.py  test_adapters.py  test_audit_fixes.py  test_audit_iter3.py  test_budget.py  test_classify.py  test_cli_categories.py  test_compress.py  test_config.py  test_context_drivers.py  test_detector_cost_spike.py  test_detectors.py  test_doctor.py  test_gain.py  test_logger.py  test_pricing.py  test_proxy_cli.py  test_proxy_extractor.py  test_proxy_server.py  test_proxy_setup.py  test_proxy_skip_process_cli.py  test_report.py  test_reset.py  test_setup_wizard.py  test_share.py  test_tail_cost.py  test_tail_header.py  test_tail_spike_tracker.py  test_wrapper.py
